Updated pipeline settings. Started using multi stage build for decrease image size. Fixed fat jar building