@@ -2,11 +2,11 @@ FROM maven:3.6.1-jdk-8
 
 EXPOSE 8087
 
-ENV DEFAULT_JAR_NAME integrations.jar
-
 ENV BASE_DIR /opt/distil_integrations
+ENV DEFAULT_JAR_NAME integrations.jar
+ENV JAR_PATH target/${DEFAULT_JAR_NAME}
+
 ENV SETTINGS_FILE /usr/share/maven/conf/settings.xml
-ENV DEFAULT_PROFILE default
 
 WORKDIR ${BASE_DIR}
 ADD pom.xml ${BASE_DIR}
@@ -17,4 +17,13 @@ COPY ./ ${BASE_DIR}
 #tests will run outside of the docker
 RUN mvn clean install -s ${SETTINGS_FILE}  -Dmaven.test.skip=true
 
-ENTRYPOINT java -Dspring.profiles.active=${DEFAULT_PROFILE} -cp target/${DEFAULT_JAR_NAME} ai.distil.integration.IntegrationApp
+FROM openjdk:8u212-jre-slim
+ENV DEFAULT_PROFILE default
+
+ENV BASE_DIR /opt/distil_integrations
+ENV DEFAULT_JAR_NAME integrations.jar
+ENV JAR_PATH target/${DEFAULT_JAR_NAME}
+
+WORKDIR ${BASE_DIR}
+COPY --from=0 ${BASE_DIR}/${JAR_PATH} ${BASE_DIR}
+ENTRYPOINT java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dspring.profiles.active=${DEFAULT_PROFILE} -cp ${BASE_DIR}/${DEFAULT_JAR_NAME} ai.distil.integration.IntegrationApp
